fix(gtk320: toolbar): imagebutton spacing to make it square - 3

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -164,6 +164,10 @@
                 color: $titlebar_fg_focused;
             }
 
+            &.image-button {
+                padding: $spacing;
+            }
+
             &:backdrop {
                 color: $titlebar_fg_unfocused;
             }
